--- a/fonts.css
+++ b/fonts.css
@@ -45,3 +45,12 @@
   font-weight: 700;
   font-style: italic;
 }
+
+.noto-sans-regular {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
