--- a/style.css
+++ b/style.css
@@ -53,13 +53,13 @@ h2{
     text-align: center;
 }
 
-.Game-Container{
+.Container{
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
 
-.Games-Sections{
+.Main-Sections{
   position: relative;
   display: flex;
   flex-direction: column;
@@ -69,32 +69,33 @@ h2{
   width: fit-content;
 }
 
-.Game-Image{
+.Main-Image{
   border: solid 2px black;
   width: max-content;
   height: auto;
+  max-height: 300px;
   box-shadow: 1px 1px 5px black;
 }
 
 
-.Game-Div{
+.Main-Div{
   position: relative;
   display: flex;
   flex-direction: column;
   gap: 4rem;
-  /* background-color: rgb(197, 197, 197); */
+  background-color: rgb(243, 243, 243);
   padding: 2rem;
   /* border-radius: 1rem; */
 }
 
-.Game-Main{
+.Sub-Div{
   display: flex;
   flex-direction: row;
   align-items:flex-start;
   gap: 2rem;
 }
 
-.Game-Info{
+.Info{
   /* background-color: rgb(214, 238, 220);
   box-shadow: 0px 0px 4px rgb(162, 179, 162); */
   padding: 0rem 2rem;
@@ -103,7 +104,7 @@ h2{
   font-size: 1rem;
 }
 
-.Game-Title{
+.Title{
   font-size: 3rem;
   text-decoration: none;
   color: black;
@@ -115,7 +116,7 @@ h2{
   width: fit-content;
 }
 
-.Game-Specs{
+.Specs{
   color: #2f352f;
   text-transform:none;
 }
