--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
 body{
     font-family: "Noto Sans", "Space Mono", monospace;
     background-color: rgb(170, 207, 176);
+    font-size: 16px;
 }
 
 header{
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 2rem;
+    margin: 2em;
 }
 
 h1{
-  font-size: 8rem;
+  font-size: 4em;
   color: white;
-  line-height: 1rem;
+  line-height: 1em;
 }
 h2{
-  font-size: 4rem;
+  color: white;
+  font-size: 2em;
 }
 
 #zeblog-Logo{
@@ -25,11 +27,11 @@ h2{
 }
 
 .main-buttons {
-  border-radius: 2rem;
+  border-radius: 2em;
   background-color: rgb(255, 255, 255);
   border: none;
   color: #2f352f;
-  font-size: 2rem;
+  font-size: 2em;
   padding: 20px;
   width: fit-content;
   margin: 5px;
@@ -64,16 +66,16 @@ h2{
   display: flex;
   flex-direction: column;
   /* background-color: whitesmoke; */
-  padding: 0rem 2rem 2rem 2rem;
-  border-radius: 0.5rem;
+  padding: 0rem 2em 2em 2em;
+  border-radius: 0.5em;
   width: fit-content;
 }
 
 .Main-Image{
-  border: solid 2px black;
+  border: solid 1px black;
   width: max-content;
   height: auto;
-  max-height: 300px;
+  max-height: 200px;
   box-shadow: 1px 1px 5px black;
 }
 
@@ -84,28 +86,29 @@ h2{
   flex-direction: column;
   gap: 4rem;
   background-color: rgb(243, 243, 243);
-  padding: 2rem;
+  padding: 2em;
   /* border-radius: 1rem; */
+  margin: auto;
 }
 
 .Sub-Div{
   display: flex;
   flex-direction: row;
   align-items:flex-start;
-  gap: 2rem;
+  gap: 2em;
 }
 
 .Info{
   /* background-color: rgb(214, 238, 220);
   box-shadow: 0px 0px 4px rgb(162, 179, 162); */
-  padding: 0rem 2rem;
+  padding: 0rem 2em;
   display: flex;
   flex-direction: column;
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 .Title{
-  font-size: 3rem;
+  font-size: 2em;
   text-decoration: none;
   color: black;
 }
@@ -114,13 +117,15 @@ h2{
   text-transform: uppercase;
   display: flex;
   width: fit-content;
+  margin: 0.2em 0em;
 }
 
 .Specs{
   color: #2f352f;
   text-transform:none;
+  text-indent: 10px;
 }
 
 .Info-Titles-Container{
-  line-height: 0.1rem;
+  line-height: 0.1em;
 }
